testsuite/tests/parser/should_fail/readFail047.stderr

readFail047.hs:5:9: error: opening brace is here

readFail047.hs:6:5: error: missing closing tuple brace ')'
